fixing whitespace

--- a/homepage.css
+++ b/homepage.css
@@ -30,6 +30,7 @@ font-size: 1em;
 float: right;
 display: inline-block;
 margin: 5.4em 4em 0.2em 0.7em;
+border: 1px solid red;
 }
 
 a{
